--- a/index.html
+++ b/index.html
@@ -33,17 +33,18 @@
 
     body{
       background: linear-gradient(180deg,var(--bg1),var(--bg2));
+      overflow-x: hidden;
     }
 
     /* TOP SECTION */
     .top{
-      min-height:65vh;
+      min-height:72vh;
 
       display:flex;
       justify-content:center;
       align-items:center;
 
-      padding:60px 20px;
+      padding:50px 20px;
       text-align:center;
     }
 
@@ -54,60 +55,60 @@
 
     /* LOGO */
     .logo{
-      width:130px;
-      margin-bottom:22px;
+      width:120px;
+      margin-bottom:18px;
     }
 
     /* BRAND */
     .brand{
       font-family:"Cormorant Garamond", serif;
-      font-size:52px;
+      font-size:48px;
       letter-spacing:.22em;
       color:var(--gold-dark);
-      margin-bottom:6px;
+      margin-bottom:4px;
     }
 
     .tagline{
-      font-size:17px;
+      font-size:16px;
       letter-spacing:.35em;
       color:var(--gold);
-      margin-bottom:28px;
+      margin-bottom:24px;
     }
 
     /* TITLE */
     .title{
       font-family:"Cormorant Garamond", serif;
-      font-size:60px;
+      font-size:56px;
       letter-spacing:.15em;
       color:var(--gold-dark);
-      margin-bottom:20px;
+      margin-bottom:16px;
       line-height:1.05;
     }
 
     /* TEXT */
     .text{
-      font-size:21px;
+      font-size:20px;
       line-height:1.6;
       color:var(--soft);
-      margin-bottom:12px;
+      margin-bottom:10px;
     }
 
     /* NOTE */
     .note{
-      font-size:19px;
+      font-size:18px;
       color:var(--soft);
-      margin:22px 0 16px;
+      margin:18px 0 14px;
     }
 
     /* FORM */
     .form{
       width:100%;
-      max-width:520px;
+      max-width:500px;
       margin:0 auto;
 
       display:flex;
       border:1px solid var(--gold);
-      border-radius:10px;
+      border-radius:9px;
       overflow:hidden;
       background:#fff;
     }
@@ -116,20 +117,20 @@
       flex:1;
       border:none;
       outline:none;
-      padding:16px;
-      font-size:18px;
+      padding:15px;
+      font-size:17px;
       font-family:inherit;
     }
 
     .form button{
       border:none;
-      padding:16px 24px;
+      padding:15px 22px;
 
       background:linear-gradient(180deg,var(--gold),var(--gold-dark));
       color:white;
 
       font-weight:600;
-      letter-spacing:.16em;
+      letter-spacing:.15em;
       cursor:pointer;
 
       transition:.2s ease;
@@ -141,44 +142,30 @@
     }
 
     .small{
-      font-size:15px;
+      font-size:14px;
       color:#8a8177;
-      margin-top:16px;
+      margin-top:14px;
     }
 
     /* BOTTOM IMAGE */
     .bottom{
       width:100%;
-      height:35vh;
+      height:20vh;
 
       background-image: url("bottom.png");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-
-      display:flex;
-      align-items:flex-end;
-    }
-
-    /* FADE */
-    .fade{
-      width:100%;
-      height:120px;
-      background: linear-gradient(
-        to bottom,
-        rgba(247,241,234,0),
-        rgba(247,241,234,1)
-      );
     }
 
     /* MOBILE */
     @media(max-width:640px){
 
-      .logo{ width:105px; }
+      .logo{ width:95px; }
 
-      .brand{ font-size:38px; }
+      .brand{ font-size:36px; }
 
-      .title{ font-size:42px; }
+      .title{ font-size:40px; }
 
       .text{ font-size:18px; }
 
@@ -191,7 +178,7 @@
       }
 
       .bottom{
-        height:25vh;
+        height:14vh;
       }
 
     }
@@ -206,17 +193,13 @@
 
     <div class="content">
 
-      <!-- Logo -->
       <img src="IMG_2654.jpeg" alt="Yaldah Issa Logo" class="logo">
 
-      <!-- Brand -->
       <div class="brand">YALDAH ISSA</div>
       <div class="tagline">INNER CIRCLE</div>
 
-      <!-- Headline -->
       <h1 class="title">PRIVATE<br>ACCESS</h1>
 
-      <!-- Message -->
       <p class="text">
         Be the first to access exclusive collections,
         private releases, and members-only offers.
@@ -227,12 +210,10 @@
         elegance, and purpose.
       </p>
 
-      <!-- Note -->
       <p class="note">
         Members receive early access and special pricing.
       </p>
 
-      <!-- Form -->
       <form
         class="form"
         action="https://formspree.io/f/mvzbgkbd"
@@ -258,13 +239,12 @@
 
   </section>
 
-  <!-- BOTTOM IMAGE -->
-  <section class="bottom">
-    <div class="fade"></div>
-  </section>
+  <!-- BOTTOM -->
+  <section class="bottom"></section>
 
 </body>
 </html>
+
 
 
 
