--- a/index.html
+++ b/index.html
@@ -33,17 +33,15 @@
 
     body{
       background: linear-gradient(180deg,var(--bg1),var(--bg2));
-      overflow-x: hidden;
+      overflow-x:hidden;
     }
 
     /* TOP SECTION */
     .top{
-      min-height:72vh;
-
+      min-height:70vh;
       display:flex;
       justify-content:center;
       align-items:center;
-
       padding:50px 20px;
       text-align:center;
     }
@@ -56,7 +54,7 @@
     /* LOGO */
     .logo{
       width:120px;
-      margin-bottom:18px;
+      margin-bottom:20px;
     }
 
     /* BRAND */
@@ -72,7 +70,7 @@
       font-size:16px;
       letter-spacing:.35em;
       color:var(--gold);
-      margin-bottom:24px;
+      margin-bottom:26px;
     }
 
     /* TITLE */
@@ -81,7 +79,7 @@
       font-size:56px;
       letter-spacing:.15em;
       color:var(--gold-dark);
-      margin-bottom:16px;
+      margin-bottom:18px;
       line-height:1.05;
     }
 
@@ -90,14 +88,14 @@
       font-size:20px;
       line-height:1.6;
       color:var(--soft);
-      margin-bottom:10px;
+      margin-bottom:12px;
     }
 
     /* NOTE */
     .note{
       font-size:18px;
       color:var(--soft);
-      margin:18px 0 14px;
+      margin:20px 0 14px;
     }
 
     /* FORM */
@@ -150,7 +148,7 @@
     /* BOTTOM IMAGE */
     .bottom{
       width:100%;
-      height:20vh;
+      height:22vh;
 
       background-image: url("bottom.png");
       background-size: cover;
@@ -178,7 +176,7 @@
       }
 
       .bottom{
-        height:14vh;
+        height:15vh;
       }
 
     }
@@ -193,13 +191,17 @@
 
     <div class="content">
 
+      <!-- LOGO -->
       <img src="IMG_2654.jpeg" alt="Yaldah Issa Logo" class="logo">
 
+      <!-- BRAND -->
       <div class="brand">YALDAH ISSA</div>
       <div class="tagline">INNER CIRCLE</div>
 
+      <!-- HEADLINE -->
       <h1 class="title">PRIVATE<br>ACCESS</h1>
 
+      <!-- MESSAGE -->
       <p class="text">
         Be the first to access exclusive collections,
         private releases, and members-only offers.
@@ -210,10 +212,12 @@
         elegance, and purpose.
       </p>
 
+      <!-- NOTE -->
       <p class="note">
         Members receive early access and special pricing.
       </p>
 
+      <!-- FORM -->
       <form
         class="form"
         action="https://formspree.io/f/mvzbgkbd"
@@ -239,7 +243,7 @@
 
   </section>
 
-  <!-- BOTTOM -->
+  <!-- BOTTOM IMAGE -->
   <section class="bottom"></section>
 
 </body>
