--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
     /* TOP SECTION */
     .top{
-      min-height:70vh;
+      min-height:68vh;
       display:flex;
       justify-content:center;
       align-items:center;
-      padding:50px 20px;
+      padding:45px 20px;
       text-align:center;
     }
 
@@ -54,13 +54,13 @@
     /* LOGO */
     .logo{
       width:120px;
-      margin-bottom:20px;
+      margin-bottom:18px;
     }
 
     /* BRAND */
     .brand{
       font-family:"Cormorant Garamond", serif;
-      font-size:48px;
+      font-size:46px;
       letter-spacing:.22em;
       color:var(--gold-dark);
       margin-bottom:4px;
@@ -70,16 +70,16 @@
       font-size:16px;
       letter-spacing:.35em;
       color:var(--gold);
-      margin-bottom:26px;
+      margin-bottom:24px;
     }
 
     /* TITLE */
     .title{
       font-family:"Cormorant Garamond", serif;
-      font-size:56px;
+      font-size:54px;
       letter-spacing:.15em;
       color:var(--gold-dark);
-      margin-bottom:18px;
+      margin-bottom:16px;
       line-height:1.05;
     }
 
@@ -88,14 +88,14 @@
       font-size:20px;
       line-height:1.6;
       color:var(--soft);
-      margin-bottom:12px;
+      margin-bottom:10px;
     }
 
     /* NOTE */
     .note{
       font-size:18px;
       color:var(--soft);
-      margin:20px 0 14px;
+      margin:18px 0 14px;
     }
 
     /* FORM */
@@ -115,14 +115,14 @@
       flex:1;
       border:none;
       outline:none;
-      padding:15px;
+      padding:14px;
       font-size:17px;
       font-family:inherit;
     }
 
     .form button{
       border:none;
-      padding:15px 22px;
+      padding:14px 22px;
 
       background:linear-gradient(180deg,var(--gold),var(--gold-dark));
       color:white;
@@ -148,11 +148,11 @@
     /* BOTTOM IMAGE */
     .bottom{
       width:100%;
-      height:22vh;
+      height:28vh;
 
       background-image: url("bottom.png");
-      background-size: cover;
-      background-position: center;
+      background-size: contain;
+      background-position: center bottom;
       background-repeat: no-repeat;
     }
 
@@ -161,7 +161,7 @@
 
       .logo{ width:95px; }
 
-      .brand{ font-size:36px; }
+      .brand{ font-size:34px; }
 
       .title{ font-size:40px; }
 
@@ -176,7 +176,7 @@
       }
 
       .bottom{
-        height:15vh;
+        height:18vh;
       }
 
     }
