--- a/index.html
+++ b/index.html
@@ -217,12 +217,13 @@
         Members receive early access and special pricing.
       </p>
 
-      <!-- FORM -->
-      <form
-        class="form"
-        action="https://formspree.io/f/mvzbgkbd"
-        method="POST"
-      >
+    <form
+  class="form"
+  action="https://formspree.io/f/mvzbgkbd"
+  method="POST"
+>
+  <input type="hidden" name="_redirect" value="https://yaldahissa.com/thankyou.html">
+
         <input
           type="email"
           name="email"
