--- a/index.html
+++ b/index.html
@@ -216,12 +216,21 @@
       <p class="note">
         Members receive early access and special pricing.
       </p>
+<form class="form" action="https://formspree.io/f/mvzbgkbd" method="POST">
+  <input type="hidden" name="_redirect" value="https://yaldahissa.com/thankyou.html">
 
-    <form
-  class="form"
-  action="https://formspree.io/f/mvzbgkbd"
-  method="POST"
->
+  <input
+    type="email"
+    name="email"
+    placeholder="Enter your email"
+    required
+  >
+
+  <button type="submit">
+    JOIN NOW
+  </button>
+</form>
+
   <input type="hidden" name="_redirect" value="https://yaldahissa.com/thankyou.html">
 
         <input
