--- a/index.html
+++ b/index.html
@@ -182,7 +182,9 @@ body{
       action="https://formspree.io/f/mvzbgkbd"
       method="POST">
 
-      <input type="hidden" name="_redirect" value="https://yaldahissa.com/thankyou.html">
+      
+<input type="hidden" name="_next" value="https://yaldahissa.com/thankyou.html">
+
 
       <input
         type="email"
