--- a/index.html
+++ b/index.html
@@ -9,76 +9,92 @@
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;600&family=EB+Garamond:wght@400;500&display=swap" rel="stylesheet">
 
 <style>
-
 :root{
   --gold:#b08a5a;
   --gold-dark:#8d6b45;
-  --ink:#2f261f;
-  --soft:#6f655b;
-  --bg1:#f7f1ea;
-  --bg2:#eadfce;
 }
 
 *{box-sizing:border-box;margin:0;padding:0;}
+html,body{height:100%;font-family:"EB Garamond",serif;}
 
 body{
   min-height:100vh;
-  background:linear-gradient(180deg,var(--bg1),var(--bg2));
-  font-family:"EB Garamond",serif;
-  color:var(--ink);
+  background-image:url("hero.png");
+  background-size:cover;
+  background-position:center;
+  background-repeat:no-repeat;
+}
+
+/* overlay for readability */
+body::before{
+  content:"";
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,0.40);
+  z-index:-1;
+}
+
+.page{
+  min-height:100vh;
   display:flex;
-  justify-content:center;
+  flex-direction:column;
+}
+
+/* TOP */
+.top{
+  flex: 1 0 auto;
+  display:flex;
   align-items:center;
+  justify-content:center;
+  padding:48px 20px;
   text-align:center;
-  padding:30px;
 }
 
-.main{
-  max-width:850px;
+.content{
   width:100%;
+  max-width:900px;
+  color:rgba(255,255,255,0.95);
 }
 
-/* Logo */
 .logo{
   width:120px;
-  margin-bottom:20px;
+  margin-bottom:18px;
+  filter:drop-shadow(0 12px 22px rgba(0,0,0,.25));
 }
 
-/* Brand */
 .brand{
   font-family:"Cormorant Garamond",serif;
-  font-size:48px;
+  font-size:46px;
   letter-spacing:.22em;
-  color:var(--gold-dark);
+  margin-bottom:6px;
 }
 
 .tagline{
-  font-size:16px;
+  font-size:15px;
   letter-spacing:.35em;
-  color:var(--gold);
-  margin:18px 0 28px;
+  opacity:.85;
+  margin-bottom:22px;
 }
 
-/* Title */
 .title{
   font-family:"Cormorant Garamond",serif;
   font-size:54px;
   letter-spacing:.15em;
-  margin-bottom:18px;
+  margin-bottom:14px;
+  line-height:1.05;
 }
 
-/* Text */
 .text{
   font-size:20px;
-  color:var(--soft);
-  margin-bottom:14px;
   line-height:1.6;
+  opacity:.9;
+  margin-bottom:10px;
 }
 
-/* Button */
+/* JOIN BUTTON */
 .join-btn{
   display:inline-block;
-  margin:25px 0;
+  margin:22px 0 10px;
   padding:16px 36px;
   border-radius:10px;
   background:linear-gradient(180deg,var(--gold),var(--gold-dark));
@@ -89,39 +105,38 @@ body{
   cursor:pointer;
   transition:.2s ease;
 }
+.join-btn:hover{opacity:.9;transform:translateY(-1px);}
 
-.join-btn:hover{
-  opacity:.9;
-  transform:translateY(-1px);
-}
-
-/* Form hidden */
+/* FORM hidden until click */
 .form-wrap{
-  max-width:500px;
-  margin:0 auto;
+  max-width:520px;
+  margin:14px auto 0;
   display:none;
 }
 
 .form{
   display:flex;
-  border:1px solid var(--gold);
-  border-radius:9px;
+  border:1px solid rgba(255,255,255,0.35);
+  border-radius:10px;
   overflow:hidden;
-  background:#fff;
+  background:rgba(255,255,255,0.92);
 }
 
 .form input{
   flex:1;
   border:none;
+  outline:none;
   padding:14px;
   font-size:17px;
+  font-family:inherit;
+  color:#2f261f;
 }
 
 .form button{
   border:none;
   padding:14px 22px;
   background:linear-gradient(180deg,var(--gold),var(--gold-dark));
-  color:white;
+  color:#fff;
   font-weight:600;
   letter-spacing:.15em;
   cursor:pointer;
@@ -129,89 +144,93 @@ body{
 
 .small{
   font-size:14px;
-  color:#8a8177;
-  margin-top:14px;
+  opacity:.85;
+  margin-top:12px;
 }
 
-/* Mobile */
-@media(max-width:640px){
+/* ✅ BOTTOM IMAGE STRIP (THIS IS THE PART YOU WANT BACK) */
+.bottom{
+  flex: 0 0 auto;
+  width:100%;
+  height:22vh;
 
-  .brand{font-size:36px;}
+  background-image:url("bottom.png");
+  background-size:cover;
+  background-position:center;
+  background-repeat:no-repeat;
+}
+
+/* optional fade at top of bottom image so it blends */
+.bottom::before{
+  content:"";
+  display:block;
+  height:70px;
+  background:linear-gradient(to bottom, rgba(0,0,0,0.35), rgba(0,0,0,0));
+}
+
+/* MOBILE */
+@media(max-width:640px){
+  .logo{width:95px;}
+  .brand{font-size:34px;}
   .title{font-size:40px;}
+  .text{font-size:18px;}
 
   .form{flex-direction:column;}
   .form button{width:100%;}
 
+  .bottom{height:18vh;}
 }
-
 </style>
 </head>
 
 <body>
+  <div class="page">
 
-<div class="main">
+    <section class="top">
+      <div class="content">
 
-  <!-- Logo -->
-  <img src="IMG_2654.jpeg" class="logo">
+        <img src="IMG_2654.jpeg" alt="Yaldah Issa Logo" class="logo">
 
-  <!-- Brand -->
-  <div class="brand">YALDAH ISSA</div>
-  <div class="tagline">INNER CIRCLE</div>
+        <div class="brand">YALDAH ISSA</div>
+        <div class="tagline">INNER CIRCLE</div>
 
-  <!-- Title -->
-  <h1 class="title">PRIVATE ACCESS</h1>
+        <h1 class="title">PRIVATE<br>ACCESS</h1>
 
-  <!-- Text -->
-  <p class="text">
-    Be the first to access exclusive collections,
-    private releases, and members-only offers.
-  </p>
+        <p class="text">Be the first to access exclusive collections, private releases, and members-only offers.</p>
+        <p class="text">Created for women who lead with confidence, elegance, and purpose.</p>
 
-  <p class="text">
-    Created for women who lead with confidence,
-    elegance, and purpose.
-  </p>
+        <a class="join-btn" onclick="openForm()">JOIN NOW</a>
 
-  <!-- Button -->
-  <a class="join-btn" onclick="openForm()">JOIN NOW</a>
+        <div class="form-wrap" id="formBox">
+          <form class="form" action="https://formspree.io/f/mvzbgkbd" method="POST">
+            <input type="hidden" name="_next" value="https://yaldahissa.com/thankyou.html">
 
-  <!-- Form -->
-  <div class="form-wrap" id="formBox">
+            <input type="email" name="email" placeholder="Enter your email" required>
 
-    <form class="form"
-      action="https://formspree.io/f/mvzbgkbd"
-      method="POST">
+            <button type="submit">SUBMIT</button>
+          </form>
 
-      
-<input type="hidden" name="_next" value="https://yaldahissa.com/thankyou.html">
+          <p class="small">✨ Limited access • Invitation only</p>
+        </div>
 
+      </div>
+    </section>
 
-      <input
-        type="email"
-        name="email"
-        placeholder="Enter your email"
-        required
-      >
-
-      <button type="submit">SUBMIT</button>
-
-    </form>
-
-    <p class="small">✨ Limited access • Invitation only</p>
+    <!-- ✅ this line must exist or the bottom image won't show -->
+    <section class="bottom"></section>
 
   </div>
 
-</div>
-
 <script>
 function openForm(){
-  document.getElementById("formBox").style.display="block";
-  document.querySelector(".join-btn").style.display="none";
+  document.getElementById("formBox").style.display = "block";
+  document.querySelector(".join-btn").style.display = "none";
 }
 </script>
 
 </body>
 </html>
+
 
 
 
